# rust-tauri-vue3-vite

./: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
public/: index.html
src/: App.tsx  constant.tsx  index.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/utils/: app.rs  image_magick.rs  mod.rs
src/assets/styles/: app.less
src/assets/styles/global/: global-base.less  global-colors.less  global-config.less  global-custom.less  global-element.less  global-naive.less  global-styles.less  global-vars.less  global.less
src/components/: Components.tsx  RandomView.tsx  TitleBar.tsx  VideoList.vue  randomPage.vue
src/components/style/: components.less  title-bar.less
src/router/: index.ts
src/stores/: people.ts
src/utils/: inter.ts  table.tsx  zip.ts
src/views/: Home.tsx
src/views/style/: home.less
static/font/: iconfont.css  iconfont.js  iconfont.json
utils/: StaticPath.ts  constant.ts  electron.ts  ffmpeg.ts  file.ts  fs.ts  gltf.ts  html.ts  http.ts  js.ts  jsx.tsx  node.ts  sharp.ts  str.ts  time.ts  utils.ts  zip.ts
utils/JsEx/: ArrayEx.ts  MapEx.ts  NumEx.ts  ObjectEx.ts  SetEx.ts  jsEx.ts
utils/ffmpeg/: path.ts
utils/image/: apng.ts  const.image.ts  image.ts
