[package]
name = "tauriv2-vue-desktop-starter"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
anyhow = "1.0.86"
serde = "1.0.208"
serde_json = "1.0.125"
tauri = { version = "1.5", features = [ "dialog-all", "shell-open"] }
tempfile = "3.12.0"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
