[package]
name = "tauriv2-vue-desktop-starter"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
anyhow = "1.0.86"
bytes = "1.7.1"
flate2 = "1.0.31"
futures = "0.3.30"
rand = "0.8.5"
serde = "1.0.208"
serde_json = "1.0.125"
tar = "0.4.41"
tauri = { version = "1.7.1", features = ["dialog-all", "shell-open"] }
tempfile = "3.12.0"
tokio = { version = "1.39.2", features = ["full"] }
walkdir = "2.5.0"
zip = "2.1.6"
zip-extensions = "0.8.1"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
